syntax="proto3";
package com.hasansahin.grpc;
option java_multiple_files = true;

service DiscountService{
  rpc getDiscount(DiscountRequest) returns (DiscountResponse);
}

message DiscountRequest{
  string discountCode=1;
  float price=2;
  int64 externalCategoryId=3;
}

message DiscountResponse{
  string discountCode=1;
  float newPrice=2;
  float oldPrice=3;
  Response response=4;
}

message Response{
  bool status=1;
  string message=2;
}